--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-nav></app-nav>
-<main [@routeAnimations]="prepareRoute(outlet)">
+<main [@routeAnimation]="prepareRoute(outlet)">
     <router-outlet #outlet="outlet"></router-outlet>
 </main>
