--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,54 +1,106 @@
 <form class="container mt-4">
-    <div class="form-row justify-content-center">
-        <div class="col-md-8">
-          <div class="alert alert-danger" role="alert" [ngStyle]="{'display': showErrorMessage ? 'block' : 'none'}">
-              {{ errorMessage }}
-          </div>
-        </div>
-      <div class="col-md-8 mb-3">
-        <label for="email">Email address</label>
-        <input
-          [(ngModel)]="email"
-          type="email"
-          class="form-control"
-          id="email"
-          placeholder="email@example.com"
-          name="email"
-          required
-          (input)="validateEmail($event.target.value)"
-          #emailInput="ngModel"
-        />
-        <div class="valid-feedback" [ngStyle]="{'display': isEmailValid ? 'block' : 'none'}">Looks good!</div>
-        <div class="invalid-feedback" [ngStyle]="{'display': !isEmailValid && !emailInput.untouched ? 'block' : 'none'}">Please type your email.</div>
+  <div class="form-row justify-content-center">
+    <div class="col-md-8 mx-auto text-center">
+      <h3>Login using your email and password credentials</h3>
+    </div>
+    <div class="col-md-8 mx-auto text-center">
+      <div
+        class="alert alert-danger"
+        role="alert"
+        [ngStyle]="{ display: showErrorMessage ? 'block' : 'none' }"
+      >
+        {{ errorMessage }}
       </div>
     </div>
-  
-    <div class="form-row justify-content-center">
-      <div class="col-md-8">
-        <label for="password">Password</label>
-        <input
-          [(ngModel)]="password"
-          name="password"
-          type="password"
-          class="form-control"
-          id="password"
-          placeholder="Password"
-          required
-          (input)="validatePassword($event.target.value)"
-          #passwordlInput="ngModel"
-        />
-        <div class="valid-feedback" [ngStyle]="{'display': isPasswordValid ? 'block' : 'none'}">Looks good!</div>
-        <div class="invalid-feedback" [ngStyle]="{'display': !isPasswordValid && !passwordlInput.untouched ? 'block' : 'none'}">Include both upper and lower characters.</div>
-        <div class="invalid-feedback" [ngStyle]="{'display': !isPasswordValid && !passwordlInput.untouched ? 'block' : 'none'}">Include at least one number.</div>
-        <div class="invalid-feedback" [ngStyle]="{'display': !isPasswordValid && !passwordlInput.untouched ? 'block' : 'none'}">Be at least 6 characters long.</div>
+    <div class="col-md-8 mb-3 mt-3">
+      <label for="email" class="font-weight-bold">Email address</label>
+      <input
+        [(ngModel)]="email"
+        type="email"
+        class="form-control"
+        id="email"
+        placeholder="email@example.com"
+        name="email"
+        required
+        (input)="validateEmail($event.target.value)"
+        #emailInput="ngModel"
+      />
+      <div
+        class="valid-feedback"
+        [ngStyle]="{ display: isEmailValid ? 'block' : 'none' }"
+      >
+        Looks good!
+      </div>
+      <div
+        class="invalid-feedback"
+        [ngStyle]="{
+          display: !isEmailValid && !emailInput.untouched ? 'block' : 'none'
+        }"
+      >
+        Please type your email.
       </div>
     </div>
-  
-    <div class="form-row justify-content-center">
-      <div class="col-md-8">
-        <button type="submit" class="btn btn-primary btn-lg btn-block mt-4" (click)="onClick()">
-          Login
-        </button>
+  </div>
+
+  <div class="form-row justify-content-center">
+    <div class="col-md-8 mb-2">
+      <label for="password" class="font-weight-bold">Password</label>
+      <input
+        [(ngModel)]="password"
+        name="password"
+        type="password"
+        class="form-control"
+        id="password"
+        placeholder="Password"
+        required
+        (input)="validatePassword($event.target.value)"
+        #passwordlInput="ngModel"
+      />
+      <div
+        class="valid-feedback"
+        [ngStyle]="{ display: isPasswordValid ? 'block' : 'none' }"
+      >
+        Looks good!
+      </div>
+      <div
+        class="invalid-feedback"
+        [ngStyle]="{
+          display:
+            !isPasswordValid && !passwordlInput.untouched ? 'block' : 'none'
+        }"
+      >
+        Include both upper and lower characters.
+      </div>
+      <div
+        class="invalid-feedback"
+        [ngStyle]="{
+          display:
+            !isPasswordValid && !passwordlInput.untouched ? 'block' : 'none'
+        }"
+      >
+        Include at least one number.
+      </div>
+      <div
+        class="invalid-feedback"
+        [ngStyle]="{
+          display:
+            !isPasswordValid && !passwordlInput.untouched ? 'block' : 'none'
+        }"
+      >
+        Be at least 6 characters long.
       </div>
     </div>
-  </form>
+  </div>
+
+  <div class="form-row justify-content-center">
+    <div class="col-md-8">
+      <button
+        type="submit"
+        class="btn btn-primary btn-lg btn-block mt-4"
+        (click)="onClick()"
+      >
+        Login
+      </button>
+    </div>
+  </div>
+</form>
