--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,12 +1,15 @@
 <form class="container mt-4">
   <div class="form-row justify-content-center">
-      <div class="col-md-8">
+    <div class="col-md-8 mx-auto text-center">
+      <h3>Sign Up For Free</h3>
+    </div>
+      <div class="col-md-8 mx-auto text-center">
         <div class="alert alert-danger" role="alert" [ngStyle]="{'display': showErrorMessage ? 'block' : 'none'}">
             {{ errorMessage }}
         </div>
       </div>
-    <div class="col-md-8 mb-3">
-      <label for="email">Email address</label>
+    <div class="col-md-8 mb-3 mt-3">
+      <label for="email" class="font-weight-bold">Email address</label>
       <input
         [(ngModel)]="email"
         type="email"
@@ -24,8 +27,8 @@
   </div>
 
   <div class="form-row justify-content-center">
-    <div class="col-md-8">
-      <label for="password">Password</label>
+    <div class="col-md-8 mb-2">
+      <label for="password" class="font-weight-bold">Password</label>
       <input
         [(ngModel)]="password"
         name="password"
